--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
-<article class="clock">
-  <div class="hours-container">
-    <div class="hours"></div>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>CSS Clock</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/index.css">
+  <script src="./index.js"></script>
+</head>
+<body>
+    
+  <div class="clock-body">
+    <article class="clock">
+      <div class="hours-container">
+        <div class="hours"></div>
+      </div>
+      <div class="minutes-container">
+        <div class="minutes"></div>
+      </div>
+      <div class="seconds-container">
+        <div class="seconds"></div>
+        <div class="dot"></div>
+      </div>
   </div>
-  <div class="minutes-container">
-    <div class="minutes"></div>
-  </div>
-  <div class="seconds-container">
-    <div class="seconds"></div>
-  </div>
-</article>
+  </article>
+</body>
+</html>
